# Polynomial-Generator

./: BasisFunctionsSets.h  CMakeLists.txt  Polynomial.h  README.md  SparseFunction.h  SparseFunctionStruct.h  Timer.h  main.cpp
